# templates

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
agents/0-hello-world/: LICENSE  pyproject.toml  template.yaml
agents/0-hello-world/.github/workflows/: deploy.yaml
agents/0-hello-world/src/: agent.py
agents/0-hello-world/src/functions/: helloworld.py
agents/1-custom/: pyproject.toml  template.yaml
agents/1-custom/.github/workflows/: deploy.yaml
agents/1-custom/src/: agent.py
agents/1-custom/src/customfunctions/: helloworld.py
agents/custom/src/customfunctions/: helloworld.py
agents/empty/: .gitignore  pyproject.toml  template.yaml
agents/empty/src/: agent.py
agents/hello-world/: template.yaml
agents/hello-world/src/: agent.py
agents/hello-world/src/functions/: helloworld.py
agents/python/0-hello-world/: pyproject.toml  template.yaml
agents/python/0-hello-world/.github/workflows/: deploy.yaml
agents/python/0-hello-world/src/: agent.py
agents/python/0-hello-world/src/functions/: helloworld.py
agents/python/1-custom/: LICENSE  pyproject.toml  template.yaml
agents/python/1-custom/.github/workflows/: deploy.yaml
agents/python/1-custom/src/: agent.py
agents/python/1-custom/src/customfunctions/: helloworld.py
agents/typescript/0-hello-world/: agent.ts  index.ts  package-lock.json  package.json  tsconfig.json
agents/typescript/0-hello-world/src/: agent.ts
agents/typescript/1-custom/: package-lock.json  package.json
agents/typescript/1-custom/src/: agent.ts
agents/typescript/2-voice/: README.md  package.json  template.yaml
agents/typescript/2-voice/app/: .env.local  .env.production  README.md  index.html  package-lock.json  package.json  vite.config.ts
agents/typescript/2-voice/app/src/: App.tsx  index.css  vite-env.d.ts
agents/typescript/2-voice/src/: agent.ts
agents/typescript/2-voice/src/customfunctions/: helloworld.ts
agents/typescript/2-voice/src/functions/: helloworld.ts
(+3 files in other folders)
