[project]
name = "{{ .ProjectName }}"
version = "0.1.0"
description = "{{ .ProjectDescription }}"
{{ if eq .Readme "readme" }}
readme = "README.md"
{{ end }}
requires-python = ">=3.12"
dependencies = [
    "beamlit>=0.0.34rc66",
]
{{ if eq .Ruff "ruff" }}
[dependency-groups]
dev = [
    "ruff>=0.8.2",
]

[tool.ruff]
indent-width = 4

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = ["E", "F"]
{{ end }}