[project]
name = "{{ .ProjectName }}"
version = "0.1.0"
description = "{{ .ProjectDescription }}"
{{ if eq .Readme "readme" }}
readme = "README.md"
{{ end }}
requires-python = ">=3.12"
dependencies = [
    "blaxel>=0.0.69",
    "langchain-openai>=0.3.0,<0.4.0",
    "langchain-cohere>=0.4.2",
    "langchain-xai>=0.2.0",
    "langchain-anthropic>=0.3.4",
    "langchain-mistralai>=0.2.5",
    "langchain-deepseek-official>=0.1.0",
]
{{ if eq .Ruff "ruff" }}
[dependency-groups]
dev = [
    "ruff>=0.8.2",
]

[tool.ruff]
indent-width = 4

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = ["E", "F"]
{{ end }}
